# guiding-peptide-kinetics

./: .gitignore  CITATION.cff  LICENSE  LICENSE-paper  README.md  check-paces.ipynb  environment.yml  pyproject.toml
data/: Tm.csv  average_change_difference(clearer state).csv  average_change_difference.csv  average_change_folded(clearer state).csv  average_change_folded.csv  average_change_unfolded(clearer state).csv  average_change_unfolded.csv  cov_dot_products(clearer state).csv  cov_dot_products.csv  diagonal_cov_dot_products.csv  eigenvalues(clearer state).csv  eigenvalues.csv  enthalpy.csv  full_evec_dot.csv  hlda_best_thresholds.csv  hlda_lambda_grid.pkl  hlda_lambda_grid_norm.pkl  hlda_lambda_grid_norm_lambda.pkl  hlda_lambda_grid_pooled.pkl  hlda_lambda_grid_separate.pkl  hlda_summary_10_30.csv  hlda_summary_12_26.csv  hlda_summary_12_30.csv  hlda_summary_14_26.csv  hlda_summary_14_30.csv  hlda_summary_tF=0.25_tU=0.52.csv  hlda_summary_tF=0.25_tU=0.57.csv  hlda_summary_tF=0.25_tU=0.68.csv  hlda_summary_tF=0.29_tU=0.52.csv  hlda_summary_tF=0.29_tU=0.79.csv  local_variances(clearer state).csv  local_variances.csv  md-charmm.mdp  mfpt-pace=25000-granular.pkl  mfpt-pace=25000-new-ref.pkl  mfpt-pace=25000-partial.pkl  mfpt-pace=25000.pkl  mfpt-pace=5000.pkl  mfpt.csv  mfpt.pkl  (+8 more)
scripts/: pack_data.sh  unpack_data.sh
src/: STiMetaD.py  backup.ini  base_run.sh  base_run_job.sh  check-paces.ipynb  config.sh  correlations.ipynb  dan.html  dan.ipynb  dla_comparison.ipynb  fes.ipynb  folded_unfolded.sh  fpt.ipynb  fpt.py  fpt_run.sh  fpt_single_run.sh  hlda.ipynb  (+27 more)
(+65 files in other folders)
